# csad2526KI404ZakharKoOlehStepanovych11

./: .gitignore  CMakeLists.txt  README.md  ci.bat  ci.sh  history.txt  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
